[gd_scene load_steps=6 format=3 uid="uid://c1xp1m6kdpsgk"]

[ext_resource type="Script" path="res://scripts/CameraMan.gd" id="1_v86fq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_u1rgv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_bw0sc"]

[sub_resource type="Sky" id="Sky_85t4l"]
sky_material = SubResource("ProceduralSkyMaterial_bw0sc")

[sub_resource type="Environment" id="Environment_i6cj1"]
background_mode = 2
sky = SubResource("Sky_85t4l")
sdfgi_bounce_feedback = 0.08
fog_light_color = Color(0.454902, 0.454902, 0.454902, 1)
fog_density = 0.1

[node name="CameraMan" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0)
script = ExtResource("1_v86fq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_u1rgv")
disabled = true

[node name="Camera3D" type="Camera3D" parent="." groups=["camera"]]
environment = SubResource("Environment_i6cj1")

[node name="Cantos" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="up" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_right = -16.0
offset_bottom = 21.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="up_left" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
offset_right = 16.0
offset_bottom = 21.0
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="up_right" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 21.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="down_left" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -21.0
offset_right = 16.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="down_right" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -21.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="down" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -21.0
offset_right = -16.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="left" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 22.0
offset_right = 16.0
offset_bottom = -21.0
grow_vertical = 2
mouse_filter = 1

[node name="right" type="ReferenceRect" parent="Camera3D/Cantos"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 21.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1

[connection signal="mouse_entered" from="Camera3D/Cantos/up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/up" to="." method="_on_up_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/up_left" to="." method="_on_up_left_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/up_left" to="." method="_on_up_left_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/up_right" to="." method="_on_up_right_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/up_right" to="." method="_on_up_right_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/down_left" to="." method="_on_down_left_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/down_left" to="." method="_on_down_left_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/down_right" to="." method="_on_down_right_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/down_right" to="." method="_on_down_right_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/down" to="." method="_on_down_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="Camera3D/Cantos/right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="Camera3D/Cantos/right" to="." method="_on_right_mouse_exited"]
